// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Navigator Click action to open camera 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="camerabtn"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": 55,
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="camera"
      size={20}
    />
  </View>
</View>
`;

exports[`Home Navigator Render print queue button  1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="print-queue-button"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": 55,
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="printer"
      size={20}
    />
  </View>
</View>
`;

exports[`Home Navigator Renders the Home navigator component 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={
      {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      }
    }
    listeners={
      {
        "blur": [Function],
      }
    }
    name="HomeScreen"
    options={[Function]}
  />
  <Screen
    component={[Function]}
    name="FeedbackScreen"
    options={[Function]}
  />
</StackNavigator>
`;

exports[`Home Navigator Renders the cameraButton header icon 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="camerabtn"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": 55,
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="camera"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`Home Navigator Renders the home header when isManualScanEnabled is false 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
    testID="btnScan"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#ffffffff"
        name="barcode-scan"
        size={20}
      />
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    testID="print-queue-button"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": 55,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#ffffffff"
        name="printer"
        size={20}
      />
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    testID="btnShowMenu"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Image
        source=""
        style={
          {
            "height": 25,
            "marginRight": 10,
            "width": 10,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Home Navigator Renders the home header when isManualScanEnabled is true 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
    testID="btnScan"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#ffffffff"
        name="barcode-scan"
        size={20}
      />
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    testID="print-queue-button"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "width": 55,
        }
      }
    >
      <mockMaterialCommunityIcons
        color="#ffffffff"
        name="printer"
        size={20}
      />
    </View>
  </TouchableOpacity>
  <TouchableOpacity
    onPress={[Function]}
    testID="btnShowMenu"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Image
        source=""
        style={
          {
            "height": 25,
            "marginRight": 10,
            "width": 10,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Home Navigator Renders the home menu button and onclick call track event 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btnShowMenu"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Image
      source=""
      style={
        {
          "height": 25,
          "marginRight": 10,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`Home Navigator Renders the printQueueButton header icon 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="print-queue-button"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": 55,
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="printer"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`Home Navigator Renders the scanButton header icon when manual scan set to false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btnScan"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</View>
`;

exports[`Home Navigator Renders the scanButton header icon when manual scan set to true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btnScan"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <mockMaterialCommunityIcons
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</View>
`;
